--- a/.github/workflows/rego-workflow.yml
+++ b/.github/workflows/rego-workflow.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -22,10 +21,8 @@ jobs:
     - name: Validate Rego
       run: ./opa check ./rego/all.rego
 
-    - name: Test Rego
-      run: ./opa test ./rego/  # replace with your actual rego test directory if you have tests
+    - name: Install jq
+      run: sudo apt-get install -y jq
 
     - name: Process JSON
-      run: |
-        sudo apt-get install -y jq
-        jq . ./rego/all.json
+      run: jq . ./rego/all.json
