--- a/.github/workflows/rego-workflow.yml
+++ b/.github/workflows/rego-workflow.yml
@@ -11,7 +11,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Use Node.js 16
+      uses: actions/setup-node@v3
+      with:
+        node-version: 16
 
     - name: Setup OPA
       run: |
