--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,6 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run OPA Validate
-        uses: ghcr.io/open-policy-agent/opa/action@v1
+        uses: open-policy-agent/opa-docker-action@v1.0.0
         with:
           args: "eval -f pretty --data rego/all.rego --input namespace.json data.kubernetes.admission.deny"
