--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: OPA Validation
+name: Rego Workflow
 
 on:
   push:
@@ -7,13 +7,20 @@ on:
     branches: [ master ]
 
 jobs:
-  opa-check:
+  build:
     runs-on: ubuntu-latest
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v2
 
-      - name: Run OPA Validate
-        uses: open-policy-agent/opa-docker-action@v1.0.0
-        with:
-          args: "eval -f pretty --data rego/all.rego --input namespace.json data.kubernetes.admission.deny"
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Setup OPA
+      run: |
+        curl -L -o opa https://openpolicyagent.org/downloads/latest/opa_linux_amd64
+        chmod 755 ./opa
+
+    - name: Validate Rego
+      run: ./opa check ./rego/all.rego
+
+    - name: Validate Kubernetes Manifest
+      run: ./opa eval --data ./rego/all.rego --input ./namespace.json "data.kubernetes.admission.deny"
